--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -16,6 +16,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Attributes.Vital.MaxMana",DevComment="")
 +GameplayTagList=(Tag="Message.HealthDuratoin",DevComment="")
 +GameplayTagList=(Tag="Message.HealthPotion",DevComment="")
++GameplayTagList=(Tag="Message.HPpotion",DevComment="")
 +GameplayTagList=(Tag="Message.ManaDuration",DevComment="")
 +GameplayTagList=(Tag="Message.ManaPotion",DevComment="")
 
