--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -59,6 +59,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_ThirdPersonBP",NewGameName="/Script/Minigame")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPersonBP",NewGameName="/Script/Minigame")
+AssetManagerClassName=/Script/Minigame.MiniAssetMananger
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
