--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -75,3 +75,6 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+[/Script/Paper2D.PaperRuntimeSettings]
+bEnableSpriteAtlasGroups=True
+
