--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -79,3 +79,6 @@ ManualIPAddress=
 [/Script/Paper2D.PaperRuntimeSettings]
 bEnableSpriteAtlasGroups=True
 
+[/Script/NavigationSystem.NavigationSystemV1]
+bAllowClientSideNavigation=True
+
