ability system globals

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -3,3 +3,5 @@ ProjectID=93A724714200B6D6635902978D58BF74
 ProjectName=Third Person BP Game Template
 CopyrightNotice=Copyright NexonGames
 
+[/Script/GameplayAbilities.AbilitySystemGlobals]
++AbilitySystemGlobalsClassName="/Script/Minigame.MiniAbilitySystemGlobals"
