--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -13,6 +13,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Attributes.Vital.Mana",DevComment="A resource used to cast spells")
 +GameplayTagList=(Tag="Event.Montage.Attack.Melee",DevComment="")
 +GameplayTagList=(Tag="Event.Montage.Fire",DevComment="")
++GameplayTagList=(Tag="GameplayCue.MeleeImpact",DevComment="")
 +GameplayTagList=(Tag="Message.HealthDuratoin",DevComment="")
 +GameplayTagList=(Tag="Message.HealthPotion",DevComment="")
 +GameplayTagList=(Tag="Message.HPpotion",DevComment="")
