--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=Minigame
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Level/DefaultMap.DefaultMap
-GameDefaultMap=/Game/Level/DefaultMap.DefaultMap
+EditorStartupMap=/Game/Level/Shooting_L01.Shooting_L01
+GameDefaultMap=/Game/Level/Shooting_L01.Shooting_L01
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
